--- a/scss/applets/_settings.scss
+++ b/scss/applets/_settings.scss
@@ -47,7 +47,7 @@ $purple: #9356dc;
 $gradient1: linear-gradient(0deg,
     rgba(255, 255, 255, 0.15),
     rgba(255, 255, 255, 0.15)),
-  linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+  linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
 
 $gradient2: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
 
