--- a/scss/applets/_footer.scss
+++ b/scss/applets/_footer.scss
@@ -28,6 +28,10 @@ footer {
     #handshake {
       margin-right: 10px;
     }
+
+    #handshake {
+      transform: rotate(45deg)
+    }
   }
 
   @media screen and (min-width: 1200px) {
